[package]
name = "oxibtc"
version = "0.1.0"
edition = "2024"

[dependencies]
base58 = "0.2.0"
bech32 = "0.11.0"
bitcoin = "0.32.5"
bs58 = "0.5.1"
data-encoding = "2.8.0"
device_query = "3.0.0"
eframe = "0.31.0"
hex = "0.4.3"
rand = "0.9.0"
ring = "0.17.11"
ripemd = "0.1.3"
secp256k1 = "0.30.0"
sha2 = "0.10.8"
